// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepStatus /> should render 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c5 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c5:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c5:checked:before {
  display: block;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  font-weight: 600;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <p
    class="c0"
  >
    <span
      class="c1"
    >
      Le licenciement est-il dû à une faute grave (ou lourde) ?
    </span>
    <span
      class="c2"
    >
       (obligatoire)
    </span>
  </p>
  <div
    class="c3"
  >
    <label
      class="c4"
      for="seriousMisconduct-oui"
    >
      <input
        class="c5"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c4"
      for="seriousMisconduct-non"
    >
      <input
        class="c5"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
</div>
`;

exports[`<StepStatus /> should render coefficient 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c5 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c5:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c5:checked:before {
  display: block;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c12 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c11 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c11 *::-ms-backdrop,
.c11 {
  padding-right: 1.6rem;
}

.c11:invalid {
  border-color: #eb5757;
}

.c11:disabled {
  background-color: #e4e8ef;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c7 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  font-weight: 600;
}

.c8 {
  display: block;
  margin-bottom: 0.4rem;
  font-size: 1.6rem;
  cursor: pointer;
}

.c10 {
  width: 40rem;
}

.c6 {
  margin-bottom: 3.2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c9 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c10 {
    width: 100%;
  }
}

<div>
  <p
    class="c0"
  >
    <span
      class="c1"
    >
      Le licenciement est-il dû à une faute grave (ou lourde) ?
    </span>
    <span
      class="c2"
    >
       (obligatoire)
    </span>
  </p>
  <div
    class="c3"
  >
    <label
      class="c4"
      for="seriousMisconduct-oui"
    >
      <input
        class="c5"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c4"
      for="seriousMisconduct-non"
    >
      <input
        checked=""
        class="c5"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <p
    class="c0"
  >
    <span
      class="c1"
    >
      Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
    </span>
    <span
      class="c2"
    >
       (obligatoire)
    </span>
  </p>
  <div
    class="c3"
  >
    <label
      class="c4"
      for="disabledWorker-oui"
    >
      <input
        checked=""
        class="c5"
        id="disabledWorker-oui"
        name="disabledWorker"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c4"
      for="disabledWorker-non"
    >
      <input
        class="c5"
        id="disabledWorker-non"
        name="disabledWorker"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <div
    class="c6"
  >
    <label
      class="c7"
      for="input-cdt.ancienneté"
    >
      <span
        class="c1"
      >
        Quelle est l'ancienneté du salarié ?
      </span>
      <span
        class="c2"
      >
         (obligatoire)
      </span>
    </label>
    <label
      class="c8"
    >
      Choissisez parmi les catégories d'ancienneté telles que définies par le Code du travail
    </label>
    <div
      class="c9 c10"
    >
      <select
        class="c11"
        id="input-cdt.ancienneté"
        name="cdt.ancienneté"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="15| Moins de 6 mois"
        >
          Moins de 6 mois
        </option>
        <option
          value="33| 6 mois à moins de 2 ans"
        >
          6 mois à moins de 2 ans
        </option>
        <option
          value="43| Plus de 2 ans"
        >
          Plus de 2 ans
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c12"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepStatus /> should render seriousMisconduct 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c5 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c5:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c5:checked:before {
  display: block;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  font-weight: 600;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <p
    class="c0"
  >
    <span
      class="c1"
    >
      Le licenciement est-il dû à une faute grave (ou lourde) ?
    </span>
    <span
      class="c2"
    >
       (obligatoire)
    </span>
  </p>
  <div
    class="c3"
  >
    <label
      class="c4"
      for="seriousMisconduct-oui"
    >
      <input
        class="c5"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c4"
      for="seriousMisconduct-non"
    >
      <input
        checked=""
        class="c5"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
  <p
    class="c0"
  >
    <span
      class="c1"
    >
      Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
    </span>
    <span
      class="c2"
    >
       (obligatoire)
    </span>
  </p>
  <div
    class="c3"
  >
    <label
      class="c4"
      for="disabledWorker-oui"
    >
      <input
        class="c5"
        id="disabledWorker-oui"
        name="disabledWorker"
        type="radio"
        value="true"
      />
      Oui
    </label>
    <label
      class="c4"
      for="disabledWorker-non"
    >
      <input
        class="c5"
        id="disabledWorker-non"
        name="disabledWorker"
        type="radio"
        value="false"
      />
      Non
    </label>
  </div>
</div>
`;
